--- a/www/package.json
+++ b/www/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "hyperhtml": "^2.29.0",
+    "install": "^0.12.2",
+    "npm": "^6.9.0",
     "onsenui": "^2.10.8"
   }
 }
