--- a/www/package.json
+++ b/www/package.json
@@ -3,6 +3,7 @@
     "hyperhtml": "^2.29.0",
     "install": "^0.12.2",
     "npm": "^6.9.0",
-    "onsenui": "^2.10.8"
+    "onsenui": "^2.10.8",
+    "web3": "^1.0.0-beta.55"
   }
 }
