--- a/www/package.json
+++ b/www/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "bip39": "^3.0.2",
+    "ethereumjs-wallet": "^0.6.3",
     "hyperhtml": "^2.29.0",
     "install": "^0.12.2",
     "npm": "^6.9.0",
