--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
   "scripts": {
+    "browser": "phonegap serve --autoreload",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
