rename package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.makevoid.xdaiwallet",
+  "name": "com.makevoid.bitcoinwallet",
   "displayName": "<3itcoin Wallet",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
